--- a/index.html
+++ b/index.html
@@ -311,39 +311,32 @@
 
 
 
-                <div class="Parallax">
-
-                    <!-- <section class="row static-background">
-                    </section>
-
-                    <section class="row">
-                        <div class="parallax first-background">
-                        </div>
-                    </section>
-
-                    <section class="row static-background">
-                    </section>
-
-                    <section class="row">
-                        <div class="parallax second-background">
-                        </div>
-                    </section>
-
-                    <section class="row static-background">
-                    </section> -->
-
-
-                </div>
-
 
 
 
             </div>
 
+            <footer class="AllFooter">
+                <div class="w-100 FootterButtonContainer">
+                    <div>
+                        <button class="Bg-White SmallFooterButtons">Courses</button>
+                        <button class="Bg-White SmallFooterButtons">Quizes</button>
+                        <button class="Bg-White SmallFooterButtons">Exercises</button>
+                    </div>
+                    <div>
+                        <div>Forum</div>
+                        <div>Abaut</div>
+                    </div>
+
+                </div>
+                <div class="w-100">
+                </div>
+                <div class="w-100"></div>
+                <div class="w-100"></div>
+
+            </footer>
+
         </div>
-
-
-    </div>
 
 
 
