--- a/index.html
+++ b/index.html
@@ -318,21 +318,41 @@
 
             <footer class="AllFooter">
                 <div class="w-100 FootterButtonContainer">
-                    <div>
+                    <div class="FootterButtons">
                         <button class="Bg-White SmallFooterButtons">Courses</button>
                         <button class="Bg-White SmallFooterButtons">Quizes</button>
                         <button class="Bg-White SmallFooterButtons">Exercises</button>
                     </div>
-                    <div>
+                    <div class="RightFooterButtons">
                         <div>Forum</div>
-                        <div>Abaut</div>
+                        <div class="ForumAbautSpace">|</div>
+                        <div> Abaut</div>
                     </div>
 
                 </div>
-                <div class="w-100">
+                <div class="w-100 IconsContainer">
+                    <a href="linkedin.png">
+                        <img class="SocialIco" src=linkedin.png>
+                    </a>
+                    <a href="twitter.png">
+                        <img class="SocialIco" src=twitter.png>
+                    </a>
+                    <a href="facebook.png">
+                        <img class="SocialIco" src=facebook.png>
+                    </a>
                 </div>
-                <div class="w-100"></div>
-                <div class="w-100"></div>
+                <div class="w-100 w3Legends">W3Schools is optimized for learning, testing, and training. Examples might
+                    be
+                    simplified to improve reading and basic understanding. Tutorials, references, and examples are
+                    constantly reviewed to avoid errors, but we cannot warrant full correctness of all content. While
+                    using this site, you agree to have read and accepted our terms of use, cookie and privacy policy.
+                    Copyright 1999-2021 by Refsnes Data. All Rights Reserved.</div>
+                <div class="w-100">
+                    <a class="like-btn" href="like.jpg" target="_blank">
+                        <img class="LikeIco" src="like.jpg">
+                    </a>
+                </div>
+
 
             </footer>
 
