--- a/index.html
+++ b/index.html
@@ -353,13 +353,39 @@
                     </a>
                 </div>
 
+                <div class="w3schoolsShop">
+                    <button class="shopButton">
+                        <a class="shopLink" href="https://www.gazeta.pl">
+                            SKLEP
+                        </a>
+                    </button>
+
+
+
+                </div>
+
+                <div class="weatherContainer">
+                    <div class="weatherbox">
+                        <input type="text" name="Miasto" id="city">
+                        <div class="temp">Temperatura
+                            <span id="temp"></span>
+                        </div>
+                        <div class="cloud">
+                            <span id="cloud"></span>
+                        </div>
+
+                        <div class="humidity">wilgotność</div>
+                        <div class="biom">Biometr</div>
+                    </div>
+
+                </div>
 
             </footer>
 
         </div>
 
 
-
+        <script src="js.js"></script>
 </body>
 
 </html>
